[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.2.1"
tokio = "1.21.2"
serde = { version = "1", features = ["derive"]}
sqlx-cli = "0.6.2"
config = "0.11"
uuid = {version = "0.8.2", features = ["v4"]}
chrono = "0.4.22"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
once_cell = "1.15.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.5.1"


[dev-dependencies]
reqwest = "0.11"
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline",
]